--- a/QtWidgetsApplication1_HelloWorld.qrc
+++ b/QtWidgetsApplication1_HelloWorld.qrc
@@ -1,4 +1,5 @@
 <RCC>
-    <qresource prefix="QtWidgetsApplication1_HelloWorld">
-    </qresource>
+  <qresource prefix="QtWidgetsApplication1_HelloWorld">
+    <file>preview.jpg</file>
+  </qresource>
 </RCC>
